<resources>
    <string name="app_name">踏面磨耗</string>
    <!--home-->
    <string name="home_main_0">联机查询</string>
    <string name="home_main_1">设&#160;&#160;备&#160;&#160;&#160;&#160;名&#160;&#160;称：</string>
    <string name="home_main_2">阈值：</string>
    <string name="home_main_3">ms</string>
    <string name="home_main_4">测    量</string>
    <string name="home_main_5">1~255</string>
    <string name="home_main_6">连接</string>
    <string name="not_connected">没有连接任何设备</string>
    <string name="title_connecting">正在连接</string>
    <string name="title_connected_to">已连接</string>
    <string name="title_not_connected">无连接</string>
    <!--<string name="title_not_connected">已连接</string>-->
    <string name="home_main_7">轮廓</string>
    <string name="home_main_8">列车号：</string>
    <string name="home_main_9">车辆号：</string>
    <string name="home_main_10">车轴号：</string>
    <string name="home_main_11">车轮号：</string>
    <string name="home_main_12">电量：</string>
    <string name="home_main_13">保存</string>
    <string name="home_main_14">查询历史数据</string>
    <string name="home_main_15">© 济南蓝动激光技术有限公司</string>
    <string name="home_main_16">测量结果</string>
    <string name="home_main_17">杆号：</string>
    <!--data-->
    <string name="data_main_0">保    存</string>
    <string name="data_main_1">残&#160;存&#160;&#160;高&#160;度：</string>
    <string name="data_main_2">偏&#160;磨&#160;&#160;角&#160;度：</string>
    <string name="data_main_3">磨耗面宽度：</string>
    <string name="data_main_4">磨耗百分比：</string>
    <string name="data_main_5">未知</string>
    <!--<string name="data_main_5">LJM_001</string>-->
    <!--device-->
    <string name="none_paired">没有已连接过的设备</string>
    <string name="select_device">选择连接设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="scanning">查找设备中</string>
    <string name="title_paired_devices">已匹配设备</string>
    <string name="title_other_devices">其他未匹配设备</string>
    <string name="button_scan">搜寻设备</string>
    <!--wheel-->
    <string name="wheel_data_1">001~999</string>
    <string name="wheel_data_2">01~99</string>
    <string name="wheel_data_3">1~9</string>
    <string name="wheel_data_4">确    定</string>
    <string name="wheel_data_5">接触导线型号：</string>
    <!--search-->
    <string name="search">搜     索</string>
    <string name="time">检测时间：</string>
    <string name="delete">删     除</string>
    <!--list-->
    <string name="list2_1">杆号</string>
    <string name="list_1">子序号</string>
    <string name="list_2">踏&#160;面&#160;磨&#160;耗(mm)</string>
    <string name="list_3">轮&#160;缘&#160;厚&#160;度(mm)</string>
    <string name="list_4">轮&#160;辋&#160;宽&#160;度(mm)</string>
    <string name="list_5">轮&#160;辋&#160;厚&#160;度(mm)</string>
    <string name="list_6">检测时间</string>
</resources>
