<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_list_data"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_1"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/list_item_01"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_4"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/data_1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_2"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/data_2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_3"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/data_3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_5"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/data_4"/>
        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dark_line"
            android:text="@string/list_6"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/data_5"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/l_check_box">
            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/checkbox_bg_2"
                android:id="@+id/check_box_01"
                android:button="@null"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
