<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/data_main_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:baselineAligned="false"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_8"
                android:layout_weight="1.5"
                android:gravity="end"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:gravity="start"
                android:id="@+id/t_car_num_1"
                android:text="@string/wheel_data_1"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_9"
                android:layout_weight="1.5"
                android:gravity="end"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:gravity="start"
                android:id="@+id/t_car_num_2"
                android:layout_weight="1"
                android:text="@string/wheel_data_2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_10"
                android:layout_weight="1.5"
                android:gravity="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:gravity="start"
                android:id="@+id/t_car_num_3"
                android:text="@string/wheel_data_3"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_11"
                android:layout_weight="1.5"
                android:gravity="end"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:id="@+id/t_car_num_4"
                android:gravity="start"
                android:text="@string/wheel_data_3"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_1"
                android:layout_weight="1"
                android:gravity="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_5"
                android:id="@+id/data_1"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_2"
                android:layout_weight="1"
                android:gravity="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_5"
                android:id="@+id/data_2"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_3"
                android:layout_weight="1"
                android:gravity="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_5"
                android:id="@+id/data_3"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_4"
                android:layout_weight="1"
                android:gravity="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="22sp"
                android:text="@string/data_main_5"
                android:id="@+id/data_4"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|top"
        android:padding="45dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/data_main_0"
            android:id="@+id/save_data"/>
    </LinearLayout>
</LinearLayout>