<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/data_main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:baselineAligned="false"
        android:layout_marginTop="15dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_8"
                />

            <EditText
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="number"
                android:textColor="@color/dark_line"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/e_car_num_1"
                android:maxLength="3"
                android:hint="@string/wheel_data_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_9"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                />

            <EditText
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="number"
                android:textColor="@color/dark_line"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/e_car_num_2"
                android:maxLength="2"
                android:hint="@string/wheel_data_2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_10"
                />
            <EditText
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="number"
                android:textColor="@color/dark_line"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/e_car_num_3"
                android:maxLength="1"
                android:hint="@string/wheel_data_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/home_main_11"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                />

            <Spinner
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:textColor="@color/dark_line"
                android:textSize="16sp"
                android:id="@+id/e_car_num_4"
                android:gravity="center"
                android:entries="@array/s_car_num_4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_line"
                android:textSize="18sp"
                android:text="@string/wheel_data_5"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                />

            <Spinner
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:textColor="@color/dark_line"
                android:textSize="16sp"
                android:id="@+id/e_car_num_5"
                android:gravity="center"
                android:entries="@array/s_car_num_7"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/wheel_data_4"
            android:id="@+id/bt_car_num_save"
            android:layout_margin="35dp"
            />
    </LinearLayout>
</LinearLayout>